# simulator

./: #README.md#  .#README.md  Cargo.toml  README.md  asset-manifest.json  index.html  precache-manifest.29f24b11eb4fc74e2666156eeafea044.js  precache-manifest.3d57754f4f73ffbaa49d8955e580e21e.js  precache-manifest.8e2c8a7458cad7140a1b795b0dc17a1d.js  precache-manifest.939c9108ce1920d47b46b162fcb76f4a.js  precache-manifest.b80a19c535d51e4b0c8264c31f9b3ae7.js  precache-manifest.d0cd31b773942f7370f312967fea46f2.js  precache-manifest.f58546aaefce0f79754678d052a42b33.js  service-worker.js
.github/workflows/: deploy.yml  rust.yml  test-and-deploy.yml  test.yml
gui/: .gitignore  config-overrides.js  index.js  package-lock.json  package.json
gui/public/: index.html  manifest.json
gui/src/: App.jsx  App.scss  MemoryTable.jsx  MemoryTable.scss  PipelineDisplay.jsx  PipelineDisplay.scss  ToggleExpandButton.jsx  ToggleExpandButton.scss  UploadMemFileForm.jsx  UploadMemFileForm.scss  entrypoint.js  index.js  styles.js  variables.scss
robGet/: get.rs  mem.txt
src/: UI.rs  assembler.rs  bin.rs  control_unit.rs  dram  gui.rs  instructions.rs  instructions.txt  lib.rs  main.rs  memory.rs  result.rs  set.rs  test.rs  text_simulator.rs  wasm_simulator.rs
src/getset/: get  get.rs  mem.txt  mem2.txt  set  set.rs  test.rs  tet
src/memory/: blitter.rs  cache.rs  instructions.rs  mod.rs
static/js/: 2.11d1d975.chunk.js  2.11d1d975.chunk.js.map  2.42602925.chunk.js  2.42602925.chunk.js.map  2.48eff09e.chunk.js  2.48eff09e.chunk.js.map  2.7318d3f6.chunk.js  2.7318d3f6.chunk.js.map  (+36 more)
test-data/: MatrixMul  assembly  buble  example-prog.txt  hello-assembler.asm  instrs.txt  small assmebly file  swap
(+13 files in other folders)
