[package]
name = "simulator"
version = "0.1.0"
authors = ["Noah Huppert <contact@noahh.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
mockers = "0.21.0"
mockers_derive = "0.21.0"
iced = "0.1"
iced_native = "0.2"
iced_core = "0.2"
iced_web = "0.2"
iced_wgpu = "0.2"
iced_winit = "0.1"
iced_futures = "0.1.0"