[package]
name = "simulator"
version = "0.1.0"
authors = ["Noah Huppert <contact@noahh.io>"]
edition = "2018"

[lib]
name = "simulator"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "simulator"
path = "src/bin.rs"

[dependencies]
text_io = "0.1.8"
mockers = "0.21.0"
mockers_derive = "0.21.0"
bit_field = "0.10.0"
console_error_panic_hook = "0.1.6"
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]
